--- a/apps/docs/content/components/Hero.mdx
+++ b/apps/docs/content/components/Hero.mdx
@@ -8,6 +8,8 @@ description: Use the Hero component to render a full-width banner on a webpage
 ---
 
 import {Label} from '@primer/react'
+import {HeadingTags} from '@primer/react-brand'
+import {PropTableValues} from '../../src/components'
 
 ```js
 import {Hero} from '@primer/react-brand'
@@ -58,13 +60,14 @@ import {Hero} from '@primer/react-brand'
 
 ### Hero
 
-| Name                                    | Type                                                                                                         |  Default  | Description                              |
-| :-------------------------------------- | :----------------------------------------------------------------------------------------------------------- | :-------: | :--------------------------------------- |
-| `heading` <Label>Required</Label>       | `string`                                                                                                     |           | Primary heading, which defaults to a H1  |
-| `primaryAction` <Label>Required</Label> | [Object](https://github.com/primer/brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Primary call to action                   |
-| `secondaryAction`                       | [Object](https://github.com/primer/brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Optional secondary call to action        |
-| `align`                                 | `'center'`, `'start'`                                                                                        | `'start'` | Optional text alignment                  |
-| `description`                           | `string`                                                                                                     |           | Optional accompanying body text          |
-| `className`                             | `string`                                                                                                     |           | Sets a custom class on the root element  |
-| `id`                                    | `string`                                                                                                     |           | Sets a custom id                         |
-| `ref`                                   | `React.RefObject`                                                                                            |           | Forward a Ref to the underlying DOM node |
+| Name                                    | Type                                                                                                         |  Default  | Description                                        |
+| :-------------------------------------- | :----------------------------------------------------------------------------------------------------------- | :-------: | :------------------------------------------------- |
+| `heading` <Label>Required</Label>       | `string`                                                                                                     |           | Primary heading                                    |
+| `headingLevel`                          | <PropTableValues values={HeadingTags} addLineBreaks />                                                       |           | Heading level of `heading`, which defaults to a H1 |
+| `primaryAction` <Label>Required</Label> | [Object](https://github.com/primer/brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Primary call to action                             |
+| `secondaryAction`                       | [Object](https://github.com/primer/brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Optional secondary call to action                  |
+| `align`                                 | `'center'`, `'start'`                                                                                        | `'start'` | Optional text alignment                            |
+| `description`                           | `string`                                                                                                     |           | Optional accompanying body text                    |
+| `className`                             | `string`                                                                                                     |           | Sets a custom class on the root element            |
+| `id`                                    | `string`                                                                                                     |           | Sets a custom id                                   |
+| `ref`                                   | `React.RefObject`                                                                                            |           | Forward a Ref to the underlying DOM node           |
