--- a/apps/docs/content/components/Hero.mdx
+++ b/apps/docs/content/components/Hero.mdx
@@ -63,7 +63,7 @@ import {Hero} from '@primer/react-brand'
 | Name                                    | Type                                                                                                         |  Default  | Description                                        |
 | :-------------------------------------- | :----------------------------------------------------------------------------------------------------------- | :-------: | :------------------------------------------------- |
 | `heading` <Label>Required</Label>       | `string`                                                                                                     |           | Primary heading                                    |
-| `headingLevel`                          | <PropTableValues values={HeadingTags} addLineBreaks />                                                       |           | Heading level of `heading`, which defaults to a H1 |
+| `headingLevel`                          | <PropTableValues values={HeadingTags.slice(0, 3)} addLineBreaks />                                           |           | Heading level of `heading`, which defaults to a H1 |
 | `primaryAction` <Label>Required</Label> | [Object](https://github.com/primer/brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Primary call to action                             |
 | `secondaryAction`                       | [Object](https://github.com/primer/brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Optional secondary call to action                  |
 | `align`                                 | `'center'`, `'start'`                                                                                        | `'start'` | Optional text alignment                            |
