--- a/apps/docs/content/components/Card.mdx
+++ b/apps/docs/content/components/Card.mdx
@@ -2,8 +2,8 @@
 title: Card
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Card/Card.tsx
-storybook: '/brand/storybook/?path=/story/components-card--playground'
-description: Use the Card component to display information in a compact way and link to other pages.
+storybook: '/brand/storybook/?path=/story/components-card--default'
+description: Use the Card component to display information in a compact way and link to other internal pages.
 ---
 
 import {Label} from '@primer/react'
@@ -17,7 +17,7 @@ import {Card} from '@primer/react-brand'
 
 ### Default
 
-The default card can be built with a custom heading and a description. The link label defaults to `Read more` and can be customized using the `link` prop.
+The default card displays a heading and description. The link text defaults to `Read more`, but can be customized using the `label` prop.
 
 ```jsx live
 <Card href="https://github.com">
@@ -28,15 +28,30 @@ The default card can be built with a custom heading and a description. The link 
 </Card>
 ```
 
-### Label
+### Cta text
 
-The link label defaults to `Read more` and can be customized using the `label` prop.
+The cta text defaults to `Learn more` and can be customized using the `ctaText` component.
 
 ```jsx live
-<Card label="Click here" href="https://github.com">
+<Card ctaText="Discover how" href="https://github.com">
   <Card.Heading>Collaboration is the key to DevOps success</Card.Heading>
   <Card.Description>
     Everything you need to know about getting started with GitHub Actions.
+  </Card.Description>
+</Card>
+```
+
+### Label
+
+Use the `Label` to add metadata to the `Card`. The `Label` is optional and can be used to indicate the status of the content.
+
+```jsx live
+<Card href="https://github.com">
+  <Card.Label>Limited</Card.Label>
+  <Card.Heading>Code search & code view</Card.Heading>
+  <Card.Description>
+    Enables you to rapidly search, navigate, and understand code, right from
+    GitHub.com.
   </Card.Description>
 </Card>
 ```
@@ -77,10 +92,10 @@ Use the `Stack` component to stack multiple cards horizontally or vertically.
 
 ### Card
 
-| name    | type     | default     | required | description                                 |
-| ------- | -------- | ----------- | -------- | ------------------------------------------- |
-| `href`  | `string` |             | `true`   | URL to the card content                     |
-| `label` | `string` | `Read more` | `false`  | Label of the link at the bottom of the Card |
+| name      | type     | default     | required | description                                 |
+| --------- | -------- | ----------- | -------- | ------------------------------------------- |
+| `href`    | `string` |             | `true`   | URL to the card content                     |
+| `ctaText` | `string` | `Read more` | `false`  | Label of the link at the bottom of the Card |
 
 ### Card.Heading
 
