--- a/apps/docs/content/components/Label.mdx
+++ b/apps/docs/content/components/Label.mdx
@@ -74,5 +74,5 @@ You can place an icon inside the Label in the leading position to enhance the vi
 | Name            | Type                                                   |   Default   | Description                                         |
 | :-------------- | :----------------------------------------------------- | :---------: | :-------------------------------------------------- |
 | `leadingVisual` | `ReactElement`                                         | `undefined` | The leading visual appears before the Label content |
-| `size`          | <PropTableValues values={LabelSizes} addLineBreaks />  | `'medium'`  | The size variations available in Button             |
-| `color`         | <PropTableValues values={LabelColors} addLineBreaks /> | `'default'` | The color variations available in Button            |
+| `size`          | <PropTableValues values={LabelSizes} addLineBreaks />  | `'medium'`  | The size variations available in Label              |
+| `color`         | <PropTableValues values={LabelColors} addLineBreaks /> | `'default'` | The color variations available in Label             |
