--- a/apps/docs/content/components/Card.mdx
+++ b/apps/docs/content/components/Card.mdx
@@ -101,7 +101,7 @@ Use the `Stack` component to stack multiple cards horizontally or vertically.
 
 | name    | type                                                   | default   | required | description                             |
 | ------- | ------------------------------------------------------ | --------- | -------- | --------------------------------------- |
-| `color` | <PropTableValues values={LabelColors} addLineBreaks /> | `default` | `false`  | The color variations available in Label |
+| `color` | <PropTableValues values={LabelColors} addLineBreaks /> | `default` | `false`  | The color of the label |
 
 ### Card.Heading
 
