--- a/apps/docs/content/components/Label.mdx
+++ b/apps/docs/content/components/Label.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=6084-28401'
 source: https://github.com/primer/brand/blob/main/packages/react/src/Label/Label.tsx
 storybook: '/brand/storybook/?path=/story/components-label--default'
-description: Use Label to indicate the status of the content or add metadata to an element.
+description: Use a Label to indicate the status of an object or to categorize it with metadata that describes it.
 ---
 
 import {Label, LabelColors, LabelSizes} from '@primer/react-brand'
