--- a/apps/docs/content/components/Label.mdx
+++ b/apps/docs/content/components/Label.mdx
@@ -19,7 +19,7 @@ import {Label} from '@primer/react-brand'
 
 ### Default
 
-This is the default variant for the `Label` component. It corresponds to the `meduim` size and `default` color appearance.
+This is the default variant for the Label component. It corresponds to the `medium`  size and `default` color.
 
 ```jsx live
 <Label>Default</Label>
