--- a/apps/docs/content/components/Label.mdx
+++ b/apps/docs/content/components/Label.mdx
@@ -54,7 +54,7 @@ Use the `color` prop to change the color of the `Label` component. The `default`
 
 ### Leading visual
 
-You can place an icon inside the Label in the leading position to enhance the visual context. It is recommended to use an [Octicon](https://primer.style/octicons) here.
+You can add a leading icon to enhance the visual context. It is recommended you use an [Octicon](https://primer.style/octicons) here.
 
 ```jsx live
 <Stack direction="horizontal" alignItems="flex-start" padding="none">
