--- a/apps/docs/content/components/Label.mdx
+++ b/apps/docs/content/components/Label.mdx
@@ -69,7 +69,7 @@ You can add a leading icon to enhance the visual context. It is recommended you 
 
 ## Component props
 
-### Button
+### Label
 
 | Name            | Type                                                   |   Default   | Description                                         |
 | :-------------- | :----------------------------------------------------- | :---------: | :-------------------------------------------------- |
