--- a/apps/docs/content/components/Image.mdx
+++ b/apps/docs/content/components/Image.mdx
@@ -3,7 +3,7 @@ title: Image
 status: Experimental
 # figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=539%3A14285&t=RJEWZhVUtrRQ0pKh-0
 source: https://github.com/primer/brand/blob/main/packages/react/src/Image/Image.tsx
-storybook: '/brand/storybook/?path=/story/components-image--playground'
+storybook: '/brand/storybook/?path=/docs/components-image--playground'
 description: Use Image to create both normal and responsive image elements.
 ---
 
@@ -21,7 +21,15 @@ import {Image} from '@primer/react-brand'
 <Image src="https://source.unsplash.com/random" alt="Random Image" />
 ```
 
-### Aspect Ratio
+### Picture
+
+The `isPicture` prop can be used to set the container of the image to be a picture component.
+
+```jsx live
+<Image src="https://source.unsplash.com/random" alt="Random Image" isPicture />
+```
+
+### Aspect ratio
 
 The `aspectRatio` prop can be used to set the aspect ratio of the image. This is useful when the image is not the same aspect ratio as the container.
 
@@ -29,6 +37,32 @@ The `aspectRatio` prop can be used to set the aspect ratio of the image. This is
 <Image
   src="https://source.unsplash.com/random"
   alt="Random Image"
+  aspectRatio="16:9"
+/>
+```
+
+### Height
+
+The `height` prop can be used to set the height of the image. This can be used along side the `aspectRatio` prop to create a responsive image the same size as other images.
+
+```jsx live
+<Image
+  src="https://source.unsplash.com/random"
+  alt="Random Image"
+  height={200}
+  aspectRatio="16:9"
+/>
+```
+
+### Width
+
+The `width` prop can be used to set the width of the image. This can be used along side the `aspectRatio` prop to create a responsive image the same size as other images.
+
+```jsx live
+<Image
+  src="https://source.unsplash.com/random"
+  alt="Random Image"
+  width={200}
   aspectRatio="16:9"
 />
 ```
@@ -41,10 +75,12 @@ The first row in a table is automatically styled as a table header row.
 
 | name          | type                                              | default     | required | description                                                                                                                                                               |
 | ------------- | ------------------------------------------------- | ----------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `className`   | `string`                                          |             | `false`  | Custom image class                                                                                                                                                        |
-| `aspectRatio` | `1:1`, `16:9`, `16:10`, `4:3`, `[number, number]` | `undefined` | `false`  | Sets the image aspect ratio                                                                                                                                               |
+| `src`         | `string`                                          |             | `true`   | Specifies the path to the image                                                                                                                                           |
+| `alt`         | `string`                                          |             | `true`   | Specifies an alternate text for the image                                                                                                                                 |
 | `isPicture`   | `boolean`                                         | `false`     | `false`  | Toggle to create a picture element                                                                                                                                        |
+| `aspectRatio` | `1:1`, `16:9`, `16:10`, `4:3`, `[number, number]` | `undefined` | `false`  | Sets the image aspect ratio                                                                                                                                               |
+| `height`      | `number`                                          |             | `false`  | The height of the image element or its container if it has an aspect ratio                                                                                                |
+| `width`       | `number`                                          |             | `false`  | The width of the image element or its container if it has an aspect ratio                                                                                                 |
 | `loading`     | `eager`, `lazy`                                   | `eager`     | `false`  | The loading attribute specifies whether a browser should load an image immediately or to defer loading of off-screen images until for example the user scrolls near them. |
 | `decoding`    | `sync`, `async`, `auto`                           | `sync`      | `false`  | Sets the image decoding strategy. Representing a hint given to the browser on how it should decode the image.                                                             |
-
-                      |
+| `className`   | `string`                                          |             | `false`  | Custom image class                                                                                                                                                        |
