--- a/apps/docs/content/components/Image.mdx
+++ b/apps/docs/content/components/Image.mdx
@@ -23,10 +23,14 @@ import {Image} from '@primer/react-brand'
 
 ### Picture
 
-The `isPicture` prop can be used to set the container of the image to be a picture component.
+The `as` prop can be used to set the container of the image to be a picture component.
 
 ```jsx live
-<Image src="https://source.unsplash.com/random" alt="Random Image" isPicture />
+<Image
+  src="https://source.unsplash.com/random"
+  alt="Random Image"
+  as="picture"
+/>
 ```
 
 ### Aspect ratio
@@ -73,14 +77,14 @@ The `width` prop can be used to set the width of the image. This can be used alo
 
 The first row in a table is automatically styled as a table header row.
 
-| name          | type                                              | default     | required | description                                                                                                                                                               |
-| ------------- | ------------------------------------------------- | ----------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `src`         | `string`                                          |             | `true`   | Specifies the path to the image                                                                                                                                           |
-| `alt`         | `string`                                          |             | `true`   | Specifies an alternate text for the image                                                                                                                                 |
-| `isPicture`   | `boolean`                                         | `false`     | `false`  | Toggle to create a picture element                                                                                                                                        |
-| `aspectRatio` | `1:1`, `16:9`, `16:10`, `4:3`, `[number, number]` | `undefined` | `false`  | Sets the image aspect ratio                                                                                                                                               |
-| `height`      | `number`                                          |             | `false`  | The height of the image element or its container if it has an aspect ratio                                                                                                |
-| `width`       | `number`                                          |             | `false`  | The width of the image element or its container if it has an aspect ratio                                                                                                 |
-| `loading`     | `eager`, `lazy`                                   | `eager`     | `false`  | The loading attribute specifies whether a browser should load an image immediately or to defer loading of off-screen images until for example the user scrolls near them. |
-| `decoding`    | `sync`, `async`, `auto`                           | `sync`      | `false`  | Sets the image decoding strategy. Representing a hint given to the browser on how it should decode the image.                                                             |
-| `className`   | `string`                                          |             | `false`  | Custom image class                                                                                                                                                        |
+| name          | type                                    | default     | required | description                                                                                                                                                               |
+| ------------- | --------------------------------------- | ----------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `src`         | `string`                                |             | `true`   | Specifies the path to the image                                                                                                                                           |
+| `alt`         | `string`                                |             | `true`   | Specifies an alternate text for the image                                                                                                                                 |
+| `as`          | `img`, `picture`                        | `img`       | `false`  | Specification to create a picture component                                                                                                                               |
+| `aspectRatio` | `1:1`, `16:9`, `16:10`, `4:3`, `custom` | `undefined` | `false`  | Sets the image aspect ratio. A custom ratio can be provided in the design tokens.                                                                                         |
+| `height`      | `number`                                |             | `false`  | The height of the image element or its container if it has an aspect ratio                                                                                                |
+| `width`       | `number`                                |             | `false`  | The width of the image element or its container if it has an aspect ratio                                                                                                 |
+| `loading`     | `eager`, `lazy`                         | `eager`     | `false`  | The loading attribute specifies whether a browser should load an image immediately or to defer loading of off-screen images until for example the user scrolls near them. |
+| `decoding`    | `sync`, `async`, `auto`                 | `sync`      | `false`  | Sets the image decoding strategy. Representing a hint given to the browser on how it should decode the image.                                                             |
+| `className`   | `string`                                |             | `false`  | Custom image class                                                                                                                                                        |
