--- a/apps/docs/content/components/Image.mdx
+++ b/apps/docs/content/components/Image.mdx
@@ -16,8 +16,13 @@ import {Image} from '@primer/react-brand'
 
 ### Default
 
+This component uses the `img` element by default.
+
 ```jsx live
-<Image src="https://source.unsplash.com/random" alt="Random Image" />
+<Image
+  src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
+  alt="placeholder, blank area with an off-white background color"
+/>
 ```
 
 ### Picture
@@ -26,9 +31,9 @@ The `as` prop can be used to set the container of the image to be use `picture`.
 
 ```jsx live
 <Image
-  src="https://source.unsplash.com/random"
-  alt="Random Image"
   as="picture"
+  src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
+  alt="placeholder, blank area with an off-white background color"
 />
 ```
 
@@ -38,8 +43,8 @@ The `aspectRatio` prop can be used to set the aspect ratio of the image. This is
 
 ```jsx live
 <Image
-  src="https://source.unsplash.com/random"
-  alt="Random Image"
+  src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
+  alt="placeholder, blank area with an off-white background color"
   aspectRatio="16:9"
 />
 ```
@@ -50,8 +55,8 @@ The `height` prop can be used to set the height of the image. This can be used a
 
 ```jsx live
 <Image
-  src="https://source.unsplash.com/random"
-  alt="Random Image"
+  src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
+  alt="placeholder, blank area with an off-white background color"
   height={200}
   aspectRatio="16:9"
 />
@@ -63,8 +68,8 @@ The `width` prop can be used to set the width of the image. This can be used alo
 
 ```jsx live
 <Image
-  src="https://source.unsplash.com/random"
-  alt="Random Image"
+  src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
+  alt="placeholder, blank area with an off-white background color"
   width={200}
   aspectRatio="16:9"
 />
