--- a/apps/docs/content/components/Image.mdx
+++ b/apps/docs/content/components/Image.mdx
@@ -27,12 +27,24 @@ This component uses the `img` element by default.
 
 ### Picture
 
-The `as` prop can be used to set the container of the image to be use `picture`.
+The `as` prop can be used to set the container of the image to use `picture`.
 
 ```jsx live
 <Image
   as="picture"
   src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
+  alt="placeholder, blank area with an off-white background color"
+/>
+```
+
+### Image with source set
+
+The `srcSet` prop can be used to set the srcSet of the image. It also creates a `source` tag within a picture element if the `as` prop is set to `picture`.
+
+```jsx live
+<Image
+  src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
+  srcSet="https://via.placeholder.com/600x400/d3d9df/d3d9df.png, https://via.placeholder.com/900x600/d3d9df/d3d9df.png 1.5x"
   alt="placeholder, blank area with an off-white background color"
 />
 ```
@@ -79,16 +91,15 @@ The `width` prop can be used to set the width of the image. This can be used alo
 
 ### Image <Label>Required</Label>
 
+| name          | type                                              | default     | required | description                                                                                  |
+| ------------- | ------------------------------------------------- | ----------- | -------- | -------------------------------------------------------------------------------------------- |
+| `src`         | `string`                                          |             | `true`   | Specifies the path to the image                                                              |
+| `alt`         | `string`                                          |             | `true`   | Specifies a text value explaining the nature of the image for users of Assistive Technolog y |
+| `as`          | `img`, `picture`                                  | `img`       | `false`  | Specification to create a picture component                                                  |
+| `aspectRatio` | `'1:1'`, `'16:9'`, `'16:10'`, `'4:3'`, `'custom'` | `undefined` | `false`  | Sets the image aspect ratio. A custom ratio can be provided in the design tokens.            |
 
-| name          | type                                    | default     | required | description                                                                                                                                                               |
-| ------------- | --------------------------------------- | ----------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `src`         | `string`                                |             | `true`   | Specifies the path to the image                                                                                                                                           |
-| `alt`         | `string`                                |             | `true`   | Specifies a text value explaining the nature of the image for users of Assistive Technolog                                                                                                                         y
-| `as`          | `img`, `picture`                        | `img`       | `false`  | Specification to create a picture component                                                                                                                               |
-| `aspectRatio` | `'1:1'`, `'16:9'`, `'16:10'`, `'4:3'`, `'custom'` | `undefined` | `false`  | Sets the image aspect ratio. A custom ratio can be provided in the design tokens.                                                                                         |
-
-| `height`      | `number`                                |             | `false`  | The height of the image element or its container if it has an aspect ratio                                                                                                |
-| `width`       | `number`                                |             | `false`  | The width of the image element or its container if it has an aspect ratio                                                                                                 |
-| `loading`     | `eager`, `lazy`                         | `eager`     | `false`  | The loading attribute specifies whether a browser should load an image immediately or to defer loading of off-screen images until for example the user scrolls near them. |
-| `decoding`    | `sync`, `async`, `auto`                 | `sync`      | `false`  | Sets the image decoding strategy. Representing a hint given to the browser on how it should decode the image.                                                             |
-| `className`   | `string`                                |             | `false`  | Custom image class                                                                                                                                                        |
+| `height` | `number` | | `false` | The height of the image element or its container if it has an aspect ratio |
+| `width` | `number` | | `false` | The width of the image element or its container if it has an aspect ratio |
+| `loading` | `eager`, `lazy` | `eager` | `false` | The loading attribute specifies whether a browser should load an image immediately or to defer loading of off-screen images until for example the user scrolls near them. |
+| `decoding` | `sync`, `async`, `auto` | `sync` | `false` | Sets the image decoding strategy. Representing a hint given to the browser on how it should decode the image. |
+| `className` | `string` | | `false` | Custom image class |
