update offset example

--- a/apps/docs/content/components/Grid.mdx
+++ b/apps/docs/content/components/Grid.mdx
@@ -109,7 +109,8 @@ Use `start` to provide a positioning offset.
 
 ```jsx live
 <Grid enableOverlay>
-  <Grid.Column start={5}></Grid.Column>
+  <Grid.Column span={4}></Grid.Column>
+  <Grid.Column start={8}></Grid.Column>
 </Grid>
 ```
 
