--- a/apps/docs/content/components/Hero.mdx
+++ b/apps/docs/content/components/Hero.mdx
@@ -18,19 +18,18 @@ import {Hero} from '@primer/react-brand'
 ### Default
 
 ```jsx live
-<Hero
-  heading="This is my super sweet hero heading"
-  description="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sapien sit ullamcorper id. Aliquam luctus sed turpis felis nam pulvinar risus elementum."
-  primaryAction={{
-    text: 'Primary action',
-    href: '#',
-  }}
-  secondaryAction={{
-    text: 'Secondary action',
-    href: '#',
-  }}
-  align="center"
-/>
+<Hero>
+  <Hero.Heading>This is my super sweet hero heading</Hero.Heading>
+  <Hero.Description>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sapien sit ullamcorper id. Aliquam luctus sed turpis felis nam pulvinar risus elementum.
+  </Hero.Description>
+  <Hero.PrimaryAction href="#">
+    Primary action
+  </Hero.PrimaryAction>
+  <Hero.SecondaryAction>
+    Secondary action
+  </Hero.SecondaryAction>
+<Hero>
 ```
 
 ### Alignment
@@ -38,33 +37,57 @@ import {Hero} from '@primer/react-brand'
 `Hero` text alignment can be adjusted by changing the `align` prop.
 
 ```jsx live
-<Hero
-  heading={
+<Hero>
+  <Hero.Heading>
     <>
       Blazing fast cloud
       <br />
       developer environments
     </>
-  }
-  description="Visual Studio Code backed by high performance VMs that start in seconds."
-  primaryAction={{
-    text: 'Primary action',
-    href: '#',
-  }}
-/>
+  </Hero.Heading>
+  <Hero.PrimaryAction href="#">Primary action</Hero.PrimaryAction>
+</Hero>
 ```
 
 ## Component props
 
 ### Hero
 
-| Name                                    | Type                                                                                                         |  Default  | Description                              |
-| :-------------------------------------- | :----------------------------------------------------------------------------------------------------------- | :-------: | :--------------------------------------- |
-| `heading` <Label>Required</Label>       | `string`                                                                                                     |           | Primary heading, which defaults to a H1  |
-| `primaryAction` <Label>Required</Label> | [Object](https://github.com/primer/brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Primary call to action                   |
-| `secondaryAction`                       | [Object](https://github.com/primer/brand/blob/ca2d3002ba6f7ca9c719f80077c4d95246f33410/src/Hero/Hero.tsx#L8) |           | Optional secondary call to action        |
-| `align`                                 | `'center'`, `'start'`                                                                                        | `'start'` | Optional text alignment                  |
-| `description`                           | `string`                                                                                                     |           | Optional accompanying body text          |
-| `className`                             | `string`                                                                                                     |           | Sets a custom class on the root element  |
-| `id`                                    | `string`                                                                                                     |           | Sets a custom id                         |
-| `ref`                                   | `React.RefObject`                                                                                            |           | Forward a Ref to the underlying DOM node |
+| Name        | Type                  |  Default  | Description                              |
+| :---------- | :-------------------- | :-------: | :--------------------------------------- |
+| `align`     | `'center'`, `'start'` | `'start'` | Optional text alignment                  |
+| `className` | `string`              |           | Sets a custom class on the root element  |
+| `ref`       | `React.RefObject`     |           | Forward a Ref to the underlying DOM node |
+
+### Hero.Heading
+
+| name            | type                                                                                               | default | description                                    |
+| --------------- | -------------------------------------------------------------------------------------------------- | ------- | ---------------------------------------------- |
+| `as`            | <PropTableValues values={HeadingTags} addLineBreaks />                                             | `'h1'`  | Applies the underlying HTML element            |
+| `className`     | `string`                                                                                           |         | Sets a custom class on the root element        |
+| `id`            | `string`                                                                                           |         | Sets a custom id                               |
+| `ref`           | `React.RefObject`                                                                                  |         | Forward a Ref to the underlying DOM node       |
+| `size`          | <PropTableValues values={HeadingSizes} addLineBreaks />                                            |         | Override the default visual text size          |
+| `weight`        | <PropTableValues values={[...HeadingWeights, 'ResponsiveWeightMap']} addLineBreaks />              |         | Override the default visual text weight        |
+| `stretch`       | <PropTableValues values={[...HeadingStretch, 'ResponsiveStretchMap']} addLineBreaks />             |         | Override the default visual text stretch value |
+| `letterSpacing` | <PropTableValues values={[...HeadingLetterSpacing, 'ResponsiveLetterSpacingMap']} addLineBreaks /> |         | Override the default visual character spacing  |
+
+### Hero.Description
+
+| name        | type     | default | description       |
+| ----------- | -------- | ------- | ----------------- |
+| `className` | `string` |         | Text custom class |
+
+### Hero.PrimaryAction
+
+| name        | type     | default | description               |
+| ----------- | -------- | ------- | ------------------------- |
+| `className` | `string` |         | Primary link custom class |
+| `href`      | `string` |         | `href` for primary link   |
+
+### Hero.SecondaryAction
+
+| name        | type     | default | description                 |
+| ----------- | -------- | ------- | --------------------------- |
+| `className` | `string` |         | Secondary link custom class |
+| `href`      | `string` |         | `href` for secondary link   |
