Add docs import

--- a/apps/docs/content/components/Hero.mdx
+++ b/apps/docs/content/components/Hero.mdx
@@ -7,7 +7,16 @@ storybook: '/brand/storybook/?path=/story/components-hero--default'
 description: Use the Hero component to render a full-width banner on a webpage
 ---
 
+import {
+  HeadingTags,
+  HeadingSizes,
+  HeadingWeights,
+  HeadingStretch,
+  defaultHeadingTag,
+  HeadingLetterSpacing,
+} from '@primer/react-brand'
 import {Label} from '@primer/react'
+import {PropTableValues} from '../../src/components'
 
 ```js
 import {Hero} from '@primer/react-brand'
