Fix closing tag

--- a/apps/docs/content/components/Hero.mdx
+++ b/apps/docs/content/components/Hero.mdx
@@ -30,15 +30,13 @@ import {Hero} from '@primer/react-brand'
 <Hero>
   <Hero.Heading>This is my super sweet hero heading</Hero.Heading>
   <Hero.Description>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sapien sit ullamcorper id. Aliquam luctus sed turpis felis nam pulvinar risus elementum.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sapien sit
+    ullamcorper id. Aliquam luctus sed turpis felis nam pulvinar risus
+    elementum.
   </Hero.Description>
-  <Hero.PrimaryAction href="#">
-    Primary action
-  </Hero.PrimaryAction>
-  <Hero.SecondaryAction>
-    Secondary action
-  </Hero.SecondaryAction>
-<Hero>
+  <Hero.PrimaryAction href="#">Primary action</Hero.PrimaryAction>
+  <Hero.SecondaryAction>Secondary action</Hero.SecondaryAction>
+</Hero>
 ```
 
 ### Alignment
