--- a/apps/docs/content/components/Testimonial.mdx
+++ b/apps/docs/content/components/Testimonial.mdx
@@ -71,7 +71,7 @@ Use `align` to alternate the text direction. Available options are `start` (defa
 </Testimonial>
 ```
 
-### Alignment
+### Size
 
 Use `size` to alternate the text size. Available options are `small` (default) and `large`.
 
@@ -141,7 +141,7 @@ Pass additional content about the testimonial provider using `position`.
 | `id`        | `string`                                                                                                                                                     |           | Sets a custom id                         |
 | `align`     | <PropTableValues addLineBreaks values={['start','center']}/>                                                                                                 | `'start'` | Set alignment of inner text              |
 | `ref`       | `React.RefObject`                                                                                                                                            |           | Forward a Ref to the underlying DOM node |
-| `size`      | <PropTableValues addLineBreaks values={['small','large']}/>                                                                                                  | `'small'` | Forward a Ref to the underlying DOM node |
+| `size`      | <PropTableValues addLineBreaks values={['small','large']}/>                                                                                                  | `'small'` | Set size of quote's text                 |
 
 <h3 id="Testimonial-name">
   Testimonial.Name <Label>Required</Label>
