update docs example

--- a/apps/docs/content/components/Grid.mdx
+++ b/apps/docs/content/components/Grid.mdx
@@ -66,40 +66,40 @@ Use `start` with an `Object` of breakpoint-specific keys and `number` values to 
 <Grid enableOverlay>
   <Grid.Column
     span={{xsmall: 12, small: 12, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
   <Grid.Column
     span={{xsmall: 6, small: 6, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
   <Grid.Column
     span={{xsmall: 6, small: 6, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
   <Grid.Column
     span={{xsmall: 12, small: 12, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
   <Grid.Column
     span={{xsmall: 6, small: 6, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
   <Grid.Column
     span={{xsmall: 6, small: 6, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
   <Grid.Column
     span={{xsmall: 12, small: 12, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
   <Grid.Column
     span={{xsmall: 6, small: 6, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
   <Grid.Column
     span={{xsmall: 6, small: 6, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
   <Grid.Column
     span={{xsmall: 12, small: 12, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
   <Grid.Column
     span={{xsmall: 6, small: 6, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
   <Grid.Column
     span={{xsmall: 6, small: 6, medium: 6, large: 4, xlarge: 3, xxlarge: 2}}
-  ></Grid.Column>
+  />
 </Grid>
 ```
 
@@ -109,8 +109,8 @@ Use `start` to provide a positioning offset.
 
 ```jsx live
 <Grid enableOverlay>
-  <Grid.Column span={4}></Grid.Column>
-  <Grid.Column start={8}></Grid.Column>
+  <Grid.Column span={3}></Grid.Column>
+  <Grid.Column span={5} start={8}></Grid.Column>
 </Grid>
 ```
 
