--- a/apps/docs/content/components/Card.mdx
+++ b/apps/docs/content/components/Card.mdx
@@ -75,7 +75,7 @@ Use the `Label` to add metadata to the `Card`. The `Label` is optional and can b
 
 ### Icons and Labels
 
-You can combine the `Label` and `Icon` elements to add more context to the `Card`.
+Combine `Icon` and `Label` when you need to add more metadata or context to the `Card`.
 
 ```jsx live
 <Card href="https://github.com">
