--- a/apps/docs/content/components/Card.mdx
+++ b/apps/docs/content/components/Card.mdx
@@ -45,7 +45,7 @@ The cta text defaults to `Learn more` and can be customized using the `ctaText` 
 
 ### Icon
 
-You can add an `icon` to enhance the visual context. It is recommended you use an [Octicon](https://primer.style/octicons) here. Icons can be used with or without a background color using the `hasBackground` prop.
+You can add an `icon` to enhance the visual context. We recommend using an [Octicon](https://primer.style/octicons). Icons can be used with or without a background color by using the `hasBackground` prop..
 
 ```jsx live
 <Card href="https://github.com">
